fix z-index and title issue

--- a/source/css/_variables.css.sass
+++ b/source/css/_variables.css.sass
@@ -40,7 +40,7 @@ $wborder-width: 1.2em
 
 
 // ----- z-index manage ----- //
-$elements: "overlay", menu, "logo", header, footer, title, "border-left", "border-right", "main", menu-btn, "pushyoverlay", pushy,
+$elements: "overlay", menu, logo, title, header, footer, "border-left", "border-right", "main", menu-btn, "pushyoverlay", pushy,
 
 
 // -------------------------------------
